--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: #BAB2B5;
 }
 
 .App-logo {
@@ -9,18 +10,18 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #BAB2B5;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #BAB2B5;
 }
 
 .App-link {
-  color: #61dafb;
+  color: #BAB2B5;
 }
 
 @keyframes App-logo-spin {
