--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -6,13 +6,14 @@
 }
 .NavBar-Button{
     min-width: 100px;
-    color: #123c69;
     display: inline;
     padding-left: inherit;
+    font-weight: bolder;
 }
 
 .NavBar-Row{
     height: 50px;
     justify-content: flex-end;
     align-content: center;
+    background-color: #4f4a41;
 }
