made it look a bit cleaner and moved away from using tabs and will be doing spa approach

--- a/src/Components/AboutMe/AboutMe.css
+++ b/src/Components/AboutMe/AboutMe.css
@@ -3,13 +3,17 @@
 }
 
 .AboutMe-RowContainer{
-    justify-content: center;
+    justify-content: flex-start;
+}
+
+.ListItem {
+font-size: 15px
+
 }
 
 .AboutMe-Img{
     border-radius: 50%;
-    width: 300px;
-    height: 300px;
+    height: 200px;
 }
 
 .AboutMe-Header{
@@ -23,6 +27,4 @@
 
 }
 
-.AboutMe-TextBox{
-    height: 100px;
-}
+
