--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@
   background-color: #254E58;
 }
 
+.MainSection { 
+max-width: 800px;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
